--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,8 @@
 name = valdemarua
 email = valdemarua@users.noreply.github.com
 [diff]
-	colormoved = plain # color moved text shorter than 20 characters
+  # https://git-scm.com/docs/git-diff#Documentation/git-diff.txt-plain
+	colorMoved = plain # color moved text shorter than 20 characters
 [pull]
 	rebase = true
 [fetch]
