Add alacritty config. Update tmux config. Update vimrc

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,12 +6,18 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Themes
 set -g @plugin 'dracula/tmux'
 # set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'Determinant/tmux-colortag'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Tmux settings
+
+# Move status bar to the top
+set-option -g status-position top
 
 #
 # Vim Tmux Navigator settings
