Enable mouse for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,7 @@ set -g @plugin 'Determinant/tmux-colortag'
 
 # Move status bar to the top
 set-option -g status-position top
+set -g mouse on
 
 #
 # Vim Tmux Navigator settings
