Remap tmux leader

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,10 +14,19 @@ set -g @plugin 'Determinant/tmux-colortag'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+#
 # Tmux settings
+#
+
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
 
 # Move status bar to the top
 set-option -g status-position top
+
+# Enable mouse support
 set -g mouse on
 
 #
