Disable tmux themes. Add styles for status bar. Add colors script

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,11 +2,11 @@
 # List of plugins
 #
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @pl1gin 'tmux-plugins/tmux-sensible'
 # Themes
-set -g @plugin 'dracula/tmux'
+# set -g @plugin 'dracula/tmux'
 # set -g @plugin 'egel/tmux-gruvbox'
-set -g @plugin 'Determinant/tmux-colortag'
+# set -g @plugin 'Determinant/tmux-colortag'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -23,8 +23,26 @@ unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
 
+# Relooad tmux config
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+#
+# Status bar styling
+#
+
 # Move status bar to the top
 set-option -g status-position top
+# Main colors
+set -g status-bg colour236
+set -g status-fg colour6
+# Current window tab
+set-window-option -g window-status-current-style bg=colour33,fg=colour231
+# Right corner
+set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y"
+# border colours
+set -g pane-border-style fg=magenta
+set -g pane-active-border-style "bg=default fg=colour32"
+
 
 # Enable mouse support
 set -g mouse on
