Change tmux date format

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,7 @@ unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
 
-# Relooad tmux config
+# Relooad tmux confij
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 #
@@ -38,7 +38,7 @@ set -g status-fg colour6
 # Current window tab
 set-window-option -g window-status-current-style bg=colour33,fg=colour231
 # Right corner
-set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y"
+set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %d %b %y %H:%M"
 # border colours
 set -g pane-border-style fg=magenta
 set -g pane-active-border-style "bg=default fg=colour32"
