--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,6 +6,9 @@ email = valdemarua@users.noreply.github.com
 [diff]
   # https://git-scm.com/docs/git-diff#Documentation/git-diff.txt-plain
 	colorMoved = plain # color moved text shorter than 20 characters
+  tool = vimdiff
+[difftool]
+  prompt = false
 [pull]
 	rebase = true
 [fetch]
