Resolve merge conflict

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,7 @@ unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
 
-# Relooad tmux confij
+# Reload tmux config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 #
@@ -34,14 +34,15 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 set-option -g status-position top
 # Main colors
 set -g status-bg colour236
-set -g status-fg colour6
+set -g status-fg colour15
 # Current window tab
 set-window-option -g window-status-current-style bg=colour33,fg=colour231
 # Right corner
-set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %d %b %y %H:%M"
+# set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %c"
+set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %a %d %b %H:%M "
 # border colours
-set -g pane-border-style fg=magenta
-set -g pane-active-border-style "bg=default fg=colour32"
+set -g pane-border-style fg=colour117
+set -g pane-active-border-style bg=default,fg=colour33
 
 
 # Enable mouse support
