--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -596,8 +596,8 @@ window_padding_width 5 5
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
-# hide_window_decorations yes
+# hide_window_decorations no
+hide_window_decorations yes
 # hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
