--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -560,7 +560,7 @@ window_margin_width 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 5 5
+window_padding_width 2 3
 
 
 #: The window padding (in pts) (blank area between the text and the
@@ -751,7 +751,7 @@ hide_window_decorations yes
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+background_opacity 0.85
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
