--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1287,11 +1287,14 @@ background_opacity 0.85
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
 # map kitty_mod+t     new_tab
+map kitty_mod+t     new_tab_with_cwd
 # map kitty_mod+q     close_tab
 # map shift+cmd+w     close_os_window
 # map kitty_mod+.     move_tab_forward
 # map kitty_mod+,     move_tab_backward
 # map kitty_mod+alt+t set_tab_title
+
+map cmd+t new_tab_with_cwd
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
