Kitty. Enable three layouts. New aliases for npm

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -513,6 +513,7 @@ initial_window_height 600
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
+enabled_layouts tall, fat, horizontal
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
