kitty. Update tabs style

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -707,6 +707,8 @@ hide_window_decorations yes
 #: leading or trailing spaces surround the text with quotes.
 
 # tab_title_template "{title}"
+tab_title_template "{title}"
+tab_title_template "{index}: {title[title.rfind('/')+1:]}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -732,6 +734,7 @@ hide_window_decorations yes
 # active_tab_foreground   #000
 # active_tab_background   #eee
 # active_tab_font_style   bold-italic
+active_tab_font_style   bold
 # inactive_tab_foreground #444
 # inactive_tab_background #999
 # inactive_tab_font_style normal
