--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1235,6 +1235,7 @@ background_opacity 0.85
 #: Window management {{{
 
 # map kitty_mod+enter new_window
+map kitty_mod+enter new_window_with_cwd
 
 #: You can open a new window running an arbitrary program, for
 #: example::
