--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1501,3 +1501,9 @@ map cmd+9 goto_tab 9
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Rosé Pine Dawn
+include current-theme.conf
+# END_KITTY_THEME
